# supernova

./: .flake8  .pre-commit-config.yaml  README.md  bump_version.sh  make_env.sh  pyproject.toml
experiments/: basic_tensorflow_model.py  sampler_test.py  test_booster.py
src/base_learners/tensorflow/: mlp.py
src/data_utils/sampling/: __init__.py  sampler.py
src/decorators/: __init__.py  validators.py
src/ensembling/bagging/: __init__.py  bagging_classifier.py
src/ensembling/boosting/: __init__.py  danboost.py  danbooster.py  error_calculation.py
tests/ensembling/boosting/integration_tests/: test_error_calculation.py
