[tool.poetry]
name = "supernova"
version = "0.2.0"
description = "Packaged Ensemble methods for Deep Learning frameworks"
authors = ["Daniel Hewitt <dan.hewitt.15@ucl.ac.uk>"]
readme = "README.md"

packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
tensorflow = "^2.19.0"
tensorflow-metal = "^1.2.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
pre-commit = "^4.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
